[gd_scene load_steps=19 format=3 uid="uid://chnpqygrmmy6b"]

[ext_resource type="Script" uid="uid://bf35p5fhaca51" path="res://scenes/npc.gd" id="1_abqhh"]
[ext_resource type="Texture2D" uid="uid://drsyh05eukgw1" path="res://assets/prototype_character.png" id="2_abqhh"]
[ext_resource type="AudioStream" uid="uid://c8jnolcs51ddd" path="res://music/Angry.mp3" id="2_hwkja"]
[ext_resource type="Texture2D" uid="uid://c30igc7utnbtp" path="res://assets/shadow.png" id="2_rv78h"]
[ext_resource type="Texture2D" uid="uid://d1wbmny1f1qhr" path="res://assets/anger.png" id="4_7n8xq"]
[ext_resource type="Texture2D" uid="uid://dh76x7shofcas" path="res://assets/star.png" id="5_4wlns"]
[ext_resource type="Texture2D" uid="uid://dl1yw0sb38fyf" path="res://assets/radial_light_gradient3.png" id="6_tl2vt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_abqhh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_abqhh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_abqhh")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_abqhh")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_abqhh")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_abqhh")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rv78h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abqhh"]
size = Vector2(10.799999, 13.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abqhh"]
bg_color = Color(0.37036464, 0.37036443, 0.37036446, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rv78h"]
bg_color = Color(0.89492244, 0.89492244, 0.8949224, 1)

[sub_resource type="Theme" id="Theme_7n8xq"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_abqhh")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_rv78h")

[node name="npc" type="CharacterBody2D" groups=["npc"]]
scale = Vector2(2.5, 2.5)
collision_layer = 4
script = ExtResource("1_abqhh")
angry_sound = ExtResource("2_hwkja")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.3647059)
position = Vector2(0, 5.999999)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_rv78h")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1.294623, 1.3167266, 0.6536171, 1)
sprite_frames = SubResource("SpriteFrames_rv78h")
animation = &"idle"

[node name="col_shape" type="CollisionShape2D" parent="."]
position = Vector2(-0.1999995, 7.152556e-07)
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_abqhh")

[node name="waiting_for_food" type="ProgressBar" parent="."]
visible = false
offset_left = -9.0
offset_top = -13.5
offset_right = 7.5
offset_bottom = -9.5
theme = SubResource("Theme_7n8xq")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="anger" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.48000002, 0.48000002, 1)
position = Vector2(-5.2, -6.7999997)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_7n8xq")

[node name="star" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1.5999999)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_4wlns")
offset = Vector2(0, -32)

[node name="critic_light" type="PointLight2D" parent="."]
visible = false
enabled = false
color = Color(1, 0.9525, 0.43, 1)
energy = 0.3
texture = ExtResource("6_tl2vt")
texture_scale = 0.5

[node name="dialogue" type="Label" parent="."]
visible = false
offset_left = -102.399994
offset_top = -32.8
offset_right = 310.39996
offset_bottom = -15.799999
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 20
text = "I want more!!"
horizontal_alignment = 1

[node name="light" type="PointLight2D" parent="dialogue"]
position = Vector2(206.39998, 7.9999995)
scale = Vector2(1, 0.5)
texture = ExtResource("6_tl2vt")
texture_scale = 0.8
